# whatsapp-bot-server

./: .env.local  pyproject.toml
whatsapp_bot_server/: __main__.py  config.py  current_directory.py  download_media.py  flights.py  main.py  message_helper.py  parse_message.py  parse_xmk.py
whatsapp_bot_server/templates/: catalog.html  index.html
youtube_notification_server/: .env.local  main.py
