[tool.poetry]
name = "youtube-notification-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.106.0"
uvicorn = "^0.25.0"
pyngrok = "^7.0.3"
requests = "^2.31.0"
xmltodict = "^0.13.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
