[tool.poetry]
name = "whatsapp-bot-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.108.0"}
uvicorn = "^0.25.0"
pyngrok = "^7.0.3"
requests = "^2.31.0"
xmltodict = "^0.13.0"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.2"
aiohttp = {extras = ["speedups"], version = "^3.9.1"}
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
